fixed invisibility

--- a/style/styles.css
+++ b/style/styles.css
@@ -264,12 +264,27 @@
     .hidden {
         display: none;
     }
+
+    .tablet-invisible {
+        display: none;
+    }
+}
+
+@media (max-width: 1920px) and (min-width: 876px){
+    .tablet-invisible {
+        display: none;
+    }
 }
 
 @media (max-width: 430px) {
     body {
         margin: 0;
         padding: 0;
+    }
+
+    .tablet-invisible {
+        display: inline;
+        padding: 1rem;
     }
 
     .menu-header-container {
@@ -332,6 +347,10 @@
 
     .mobile-padding {
         padding-top: 0 !important;
+    }
+
+    .mobile-invisible {
+        display: none;
     }
 
 }
